[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game Scenes/Lottery/Packs/super_pack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game Scenes/Lottery/Packs/common_pack.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game Scenes/Lottery/Packs/rare_pack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Buy_tab.gd" type="Script" id=4]

[node name="Buy_tab" type="VBoxContainer"]
margin_right = 1027.0
margin_bottom = 601.0
rect_pivot_offset = Vector2( -634.742, -80.9663 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1027.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1027.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="common_pack" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 339.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="rare_pack" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 343.0
margin_right = 683.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="super_pack" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 687.0
margin_right = 1027.0
margin_bottom = 298.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1027.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 511.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Selected:
Owned:"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 515.0
margin_right = 1027.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 512.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buy!"

[node name="Buy_max" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 151.0
margin_right = 512.0
margin_bottom = 299.0
size_flags_vertical = 3
text = "Buy Max!"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/common_pack" to="." method="_on_common_pack_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/rare_pack" to="." method="_on_rare_pack_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/super_pack" to="." method="_on_super_pack_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/Buy_max" to="." method="_on_Buy_max_pressed"]
